<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.orangecoastcollege.cs273.jburk.occars.PurchaseActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/oc_cars_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/instruction"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/label_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_price"
        android:layout_alignBaseline="@+id/down_payment"
        android:layout_alignBottom="@+id/down_payment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/car_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_above="@+id/radioGroup"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginBottom="42dp"/>

    <TextView
        android:id="@+id/label_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down_payment"
        android:layout_alignBaseline="@+id/car_price"
        android:layout_alignBottom="@+id/car_price"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/down_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_above="@+id/car_price"
        android:layout_alignLeft="@+id/car_price"
        android:layout_alignStart="@+id/car_price"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_above="@+id/loan_button"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/three_yearRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/down_payment"
            android:layout_alignRight="@+id/down_payment"
            android:layout_below="@+id/car_price"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/years3"/>

        <RadioButton
            android:id="@+id/four_yearRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_toRightOf="@+id/radioGroup"
            android:text="@string/years4"/>

        <RadioButton
            android:id="@+id/five_yearRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:text="@string/years5"/>

    </RadioGroup>

    <Button
        android:id="@+id/loan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loan_report_button_text"
        android:onClick="reportSummary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
